# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  repository.py  sonar-project.properties
.github/workflows/: ci.yml
page_analyzer/: __init__.py  app.py  log_conf.py  repository.py  routes.py  validate.py
page_analyzer/services/: checks.py  normalize.py  validate.py
page_analyzer/templates/: base.html  index.html
page_analyzer/templates/errors/: 404.html  500.html
page_analyzer/templates/urls/: index.html  show.html
tests/: conftest.py  test_app.py  test_repository.py  test_validate.py
tests/services/: test_checks.py  test_normalize.py  test_validate.py
